--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "songbook",
+  "name": "@wfoxall/songbook-server",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./dist/app.js"
+    "build": "tsc",
+    "start": "node ./dist/app.js"
   },
   "author": "Will Foxall",
   "license": "ISC",
@@ -13,10 +13,10 @@
     "chordsheetjs": "^5.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "typescript": "^4.5.4",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "typescript": "^4.5.4",
     "@types/chordsheetjs": "^2.8.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
